--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <note class="btn btn-primary note">The input name which you will give should match the names given in the CoCo model then only it will be detected</note>
           <br><br>
           <label>Object name:</label><br>
-          <input class="btn btn input" id="input">
+          <input class="btn btn input" id="input_id">
           <br><br>
           <button class="btn btn-success" id="start" onclick="start()">Start</button>
           <br><br>
           <h3 class="btn btn-danger" id="status"></h3>
-          <h3 class="btn btn-warning" id="number_of_objects"></h3>
+          <h3 class="btn btn-warning" id="object_status"></h3>
       </center>
     </body>
     
